2009-07-20  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mono_jit_runtime_invoke): Speed this up by adding a hash to
	MonoJitDomainInfo which maps MonoMethod's to a structure containing all
	the information which is needed for invokes, so only one locking+hash table
	lookup is needed.

	* aot-compiler.c: Add a 'tool-prefix' option to be used when cross-compiling.
	
	* aot-compiler.c (add_generic_instances): Emit instances of 
	GenericComparer<T> for primitive types.

2009-07-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* mini-posix.c: Fix linux build.

2009-07-19  Geoff Norton  <gnorton@novell.com>

	* mini.h: Add prototypes for mono_runtime_syscall_fork and
	mono_gdb_render_native_backtraces
	* mini-darwin.c: Apple's syscall(SYS_fork) is very weird on x86,
	so we implement the sane semantics to the runtime here
	(mono_gdb_render_native_backtraces).  Apple also uses an ancient gdb
	so we need to call it differently (mono_gdb_render_native_backtraces)
	* mini-posix.c: Move the old semantics from mini.c to the prototypes
	here for default implementations.
	* mini.c: Refactor mono_handle_native_sigsegv so that we can properly
	support Apple's weird syscall (SYS_fork) implementation and not busy
	loop in abort() on native crashes on OSX anymore.

2009-07-18  Zoltan Varga  <vargaz@gmail.com>

	* aot-runtime.c (load_method): Change the handling of the
	MONO_LASTAOT env variable so MONO_LASTAOT=0 means that no aot methods
	are used.

	* mini.c (mono_patch_info_equal): Really fix the handling of RGCTX_FETCH.

2009-07-17  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mono_patch_info_equal): Revert the last change for now as it
	seems to break the aot tests.
	
	* mini.c (mono_patch_info_equal): Fix the handling of 
	MONO_PATCH_INFO_RGCTX_FETCH.

2009-07-16  Zoltan Varga  <vargaz@gmail.com>

	* unwind.c: Use TARGET_AMD64 instead of __x86_64__.

	* mini.c (mono_patch_info_hash): Fix the handling of 
	MONO_PATCH_INFO_INTERNAL_METHOD.
	(mono_patch_info_equal): Ditto.
